# Capstone-Project

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.c
Server/: CMakeLists.txt  canvas.c  canvas.h  fragment.glsl  gcode_serializer.c  gcode_serializer.h  gui.c  gui.h  image.c  image.h  main.c  nuklear_glfw_gl4.h  shader.c  shader.h  string_builder.h  util.h  vertex.glsl
Server/shaders/: fragment.glsl
